# pw1-rust-product

./: Cargo.toml  LICENSE-MIT  README.md  index.html
src/: main.rs
src/components/: aur.rs  canvas.rs  mod.rs  navbar.rs  pixel.rs
src/pages/: home.rs
static/: index.css
